# marble-carver

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add_audit.md  new_attempt.md  new_problem.md
.github/workflows/: verify.yml
docs/: GETTING_STARTED.md  PHILOSOPHY.md  WORKFLOW.md
examples/ns_blowup_mini/: problem_statement.md
examples/ns_blowup_mini/carvings/: attempt_001.md  attempt_002.md  audit_001.md
examples/t1dm_mechanism_mini/: problem_statement.md
examples/t1dm_mechanism_mini/carvings/: attempt_001.md  attempt_002.md
fundamental/template/: problem_statement.md
marble_carver/: __init__.py  __main__.py  cli.py
math/template/: lakefile.lean
math/template/AuditNotes/: audit_template.md
math/template/Carving/: Attempt001.lean
math/template/src/: CarvingProject.lean
mechanism/template/: problem_statement.md
templates/: attempt.md  audit_note.md  gap.md  problem_statement.md  verified_refs.md
tools/: audit_helper.py  verify_citations.py
tui/: __init__.py  app.py
tui/screens/: __init__.py
