[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marble-carver"
version = "0.1.0"
description = "A structured toolkit for subtractive research -- carve truth from marble."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "research", "science", "lean", "formal-methods", "tui", "textual",
    "michelangelo", "subtractive", "transparency", "retraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
    "Environment :: Console",
]

dependencies = []

[project.optional-dependencies]
tui = [
    "textual>=1.0.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[project.scripts]
marble-carver = "marble_carver.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/marble-carver"
Documentation = "https://github.com/your-org/marble-carver#readme"
Repository = "https://github.com/your-org/marble-carver"
Issues = "https://github.com/your-org/marble-carver/issues"

[tool.hatch.build.targets.wheel]
packages = ["marble_carver", "tui"]

[tool.hatch.build.targets.sdist]
include = [
    "/marble_carver",
    "/tui",
    "/templates",
    "/tools",
    "/docs",
    "/examples",
    "/math",
    "/mechanism",
    "/fundamental",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
